# large-language-models

./: README.md  pyproject.toml
checkpoints/: tiny_gpt.pt
datasets/: tiny.txt
models/: embedding.py  multi_layer_perceptron.py  multihead_attention.py  next_token.py  positional_embedding.py  singlehead_attention.py  tiny_gpt.py  tokenizer.py  transformer_block.py  transformer_input.py  utils.py
papers/: repositories.md
