[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Learning Large Language Models from the ground up"
requires-python = ">=3.10"
dependencies = [
    "kagglehub",
    "ipython",
    "numpy",
]

[project.optional-dependencies]
cpu = [
    "torch",
    "torchvision",
]
gpu = [
    "torch",
    "torchvision",
]
dev = [
    "ruff",
    "pytest",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cu128", extra = "gpu" },
]
